Closed Bug 50664 Opened 25 years ago Closed 25 years ago

[MLK] Leaking many PRUnichar strings in nsBaseFilePicker::AppendFilters(PRInt32 aFilterMask)

Categories

(Core :: XUL, defect, P2)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: beard, Assigned: bryner)

References

()

Details

(Keywords: memory-leak, Whiteboard: [nsbeta3+])

Attachments

(1 file)

The title and filter strings are being leaked repeatedly in the function pointed to by the URL above. Enclosing a patch that should fix the leak, as well as reduce the copying of strings by using NS_LITERAL_STRING().
Keywords: mlk
->bryner, nsbeta3+, P2 for M18
Assignee: trudelle → bryner
Keywords: nsbeta3, patch
Priority: P3 → P2
Whiteboard: [nsbeta3+]
Target Milestone: --- → M18
Checked in, thanks beard.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verified that the patch is in version 1.7 in the tree. Marking as such.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: