Bug 50664 - string leaks in nsBaseFilePicker.  Patch from beard, r=me.